# HMPA

./: LICENSE  README.md  pyproject.toml
data/: peptide_task_metadata.csv
scripts/: extract_esm2_features.py  predict_microprotein_bioactivity.py  train_bioactivity_models.py
src/: io_utils.py  training.py
src/hmpa_bioactivity/: __init__.py  embeddings.py  inference.py  models.py
